// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Next.js Applications next-env.d.ts should remain the same after a build 1`] = `
"/// <reference types="next" />
/// <reference types="next/image-types/global" />

// NOTE: This file should not be edited
// see https://nextjs.org/docs/app/api-reference/config/typescript for more information.
"
`;

exports[`Next.js Applications next-env.d.ts should remain the same after a build 2`] = `
"/// <reference types="next" />
/// <reference types="next/image-types/global" />

// NOTE: This file should not be edited
// see https://nextjs.org/docs/pages/api-reference/config/typescript for more information.
"
`;
